--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ mod_version = 0.1.0
 maven_group = com.template
 archives_base_name = example-mod
 
-# Dependencies
+# Dependencies | Check these on https://fabricmc.net/develop
 minecraft_version = 1.19
 yarn_mappings = 1.19+build.4
 fabric_loader = 0.14.8
