--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,8 @@
 plugins {
-	id "fabric-loom" version "1.1-SNAPSHOT"
+	id "fabric-loom" version "1.2-SNAPSHOT"
 	id "io.github.juuxel.loom-quiltflower" version "1.8.0"
-	id "io.github.p03w.machete" version "1.2.0"
 }
 
-archivesBaseName = project.archives_base_name
 version = project.mod_version
 group = project.maven_group
 
@@ -17,6 +15,10 @@ dependencies {
 
 	modImplementation "net.fabricmc:fabric-loader:${project.fabric_loader}"
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api}"
+}
+
+base {
+	archivesName = project.archives_base_name
 }
 
 processResources {
