--- a/buildscript/buildscript.properties
+++ b/buildscript/buildscript.properties
@@ -1,2 +1,13 @@
+# Mod Properties
 name = modid
+modVersion = 0.1.0+1.20
 javaVersion = 17
+
+# Dependencies
+minecraftVersion = 1.20
+yarnMappings = 1.20+build.1
+fabricLoader = 0.14.21
+quiltflower = 1.9.0
+
+fabricApi = 0.83.0+1.20
+
