--- a/buildscript/buildscript.properties
+++ b/buildscript/buildscript.properties
@@ -4,10 +4,10 @@ modVersion = 0.1.0+1.20
 javaVersion = 17
 
 # Dependencies
-minecraftVersion = 1.20
-yarnMappings = 1.20+build.1
+minecraftVersion = 1.20.1
+yarnMappings = 1.20.1+build.9
 fabricLoader = 0.14.21
-quiltflower = 1.9.0
+vineflower = 1.9.1
 
-fabricApi = 0.83.0+1.20
+fabricApi = 0.86.0+1.20.1
 
