--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
-	id "fabric-loom" version "1.2-SNAPSHOT"
-	id "io.github.juuxel.loom-quiltflower" version "1.10.0"
+	id "fabric-loom" version "1.3-SNAPSHOT"
+	id "io.github.juuxel.loom-vineflower" version "1.11.0"
 }
 
 version = project.mod_version
@@ -41,6 +41,6 @@ java {
 
 jar {
 	from("LICENSE") {
-		rename { "${it}_${project.archivesBaseName}"}
+		rename { "${it}_${project.base.archivesName.get()}"}
 	}
 }
